Added multi module project